--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset=utf-8>
-  <meta content=! name=fragment>
-  <title>Melinda</title>
-  <meta content="width=device-width,initial-scale=1" name=viewport></head>
+  <head>
+    <meta charset=utf-8>
+    <meta content=! name=fragment>
+    <title>Melinda</title>
+    <meta content="width=device-width,initial-scale=1" name=viewport>
+  </head>
   <body>
-    <p>I LIKE BUBBLE TEA!!!</p>
+    <h1>I LIKE BUBBLE TEA!!!</h1>
   </body>
 </html>
