--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset=utf-8>
     <meta content=! name=fragment>
     <title>Melinda</title>
+    <link rel="stylesheet" href="./app/css/style.css">
     <meta content="width=device-width,initial-scale=1" name=viewport>
   </head>
   <body>
-    <h1>I LIKE BUBBLE TEA!!!</h1>
+    <div class="logo-mask">
+
+        <img class="logo" src="./app/img/logo_dark.jpg">
+
+    </div>
+
   </body>
 </html>
