--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!doctype html>
-<html>
+<html style="background:black;">
   <head>
     <meta charset=utf-8>
     <meta content=! name=fragment>
     <title>Melinda</title>
     <link rel="stylesheet" href="./app/css/style.css">
     <meta content="width=device-width,initial-scale=1" name=viewport>
+    <script type="module" src="./app/modules/app.mjs"></script>
   </head>
-  <body>
+  <body style="display:none;">
     <div class="logo-mask">
-
-        <img class="logo" src="./app/img/logo_dark.jpg">
-
+        <img id="logo" class="ani" src="./app/img/logo_dark.jpg">
     </div>
-
+    <footer>
+      <span id="lfoot"><a class="ani" href="mailto://sales@melinda.fashion">sales@melinda.fashion</a></span>
+      <span id="rfoot"><a class="ani" href="mailto://support@melinda.fashion">support@melinda.fashion</a></span>
+    </footer>
   </body>
 </html>
